--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     </div>
                     <div class="row">
                       <img src="img/BikeIndexAPI.jpg" alt="bike index logo" class="img-responsive portfolio-img-bike">
-                      <h4 class="portfolio-content float-block">I recently worked on a project to create a heat map for reported bikes stolen in a specified city. This Node.js based application collects data from the Bike Index API via an AJAX GET request. <br>This information was then sent by POST to Google Maps API to geocode the addresses and create the map.</h4>
+                      <h4 class="portfolio-content float-block content2">I recently worked on a project to create a heat map for reported bikes stolen in a specified city. This Node.js based application collects data from the Bike Index API via an AJAX GET request. <br>This information was then sent by POST to Google Maps API to geocode the addresses and create the map.</h4>
                     </div>
                     <div class="row">
                       <h4 class="portfolio-content">Currently I have been diving into the D3.js framework to look at other ways to visualize data.</h4>
@@ -84,7 +84,7 @@
                     </div>
                     <div class="row">
                       <img src="img/perfect-vacation.png" alt="perfect vacation finder" class="img-responsive portfolio-img">
-                      <h4 class="portfolio-content float-block">Here I made a survey app for users to enter a series of questions. Based on the user's answers a potential vacation spot would be suggested.<br><br> While this application began as a school project I took it the extra step with social media integration. Users can share their results as status updates to Facebook. I connected the application with Audience network to allow for advertisement based income potential when users visit the page through mobile devices.</h4>
+                      <h4 class="portfolio-content float-block content2">Here I made a survey app for users to enter a series of questions. Based on the user's answers a potential vacation spot would be suggested.<br><br> While this application began as a school project I took it the extra step with social media integration. Users can share their results as status updates to Facebook. I connected the application with Audience network to allow for advertisement based income potential when users visit the page through mobile devices.</h4>
                     </div>
                   </div>
                 </div>
@@ -96,7 +96,7 @@
                     </div>
                     <div class="row">
                       <a href="https://scrabble-score-calculator.herokuapp.com/"><img src="img/scrabble_score.png" alt="scrabble score" class="img-responsive portfolio-img"></a>
-                      <h4 class="portfolio-content float-block">Click the photo to run a small program which uses a flat text file to verify if a word entered by user is in the English language. It will then give the user the Scrabble score. This program has been deployed on Heroku.<br><br> To see a more in-depth project, follow the link below to view the source code for a group project which accessed the Spotify API. This program allows for a group of people to contribute to a shared playlist. I worked on the encryption scheme which was used to securely store user passwords in a PostGreSQL database using DataMapper and Warden.</h4>
+                      <h4 class="portfolio-content float-block content2">Click the photo to run a small program which uses a flat text file to verify if a word entered by user is in the English language. It will then give the user the Scrabble score. This program has been deployed on Heroku.<br><br> To see a more in-depth project, follow the link below to view the source code for a group project which accessed the Spotify API. This program allows for a group of people to contribute to a shared playlist. I worked on the encryption scheme which was used to securely store user passwords in a PostGreSQL database using DataMapper and Warden.</h4>
                     </div>
                   </div>
                 </div>
@@ -108,7 +108,7 @@
                     </div>
                     <div class="row">
                       <img src="img/beatsbox.png" alt="drum machine image" class="img-responsive portfolio-img">
-                      <h4 class="portfolio-content float-block">My role in this project was as a project manager as well as the backend logic for the looping script. Our team accomplished a lot. It was a challenge to create a editable loop with an interrupt in a single-thread language. </h4>
+                      <h4 class="portfolio-content float-block content2">My role in this project was as a project manager as well as the backend logic for the looping script. Our team accomplished a lot. It was a challenge to create a editable loop with an interrupt in a single-thread language. </h4>
                     </div>
                   </div>
                 </div>
@@ -120,7 +120,7 @@
                     </div>
                     <div class="row">
                       <img src="img/computer_and_beer.jpg" alt="beer and computer" class="img-responsive portfolio-img-beer">
-                      <h4 class="portfolio-content float-block">Right now in addition to my full-time studies in JavaScript and Ruby on Rails I am experimenting in Clojure, C#, and Java. I love to solve algorithms and have competed in some competitive coding challenges.</h4>
+                      <h4 class="portfolio-content float-block content2">Right now in addition to my full-time studies in JavaScript and Ruby on Rails I am experimenting in Clojure, C#, and Java. I love to solve algorithms and have competed in some competitive coding challenges.</h4>
                     </div>
                   </div>
                 </div>
@@ -133,7 +133,7 @@
                   <h3 id="portfolio-link-3" class="portfolio-link">Check it Out <a href="http://beats-box.bhgconcepts.com/" target="_blank">Live!</a></h3>
                   <h3 id="portfolio-link-4" class="portfolio-link">See a project in <a href="https://github.com/BrianHGrant/clojure-noob/" target="_blank">Clojure!</a></h3>
                 </div>
-                <div class="row">
+                <div class="row portfolio-nav">
                   <div class="nav-col">
                     <img src="img/sign-previous-300px.png" alt="previous-arrow" id="up-arrow" class="img-responsive">
                     <img src="img/sign-next-300px.png" alt="next-arrow" id="down-arrow" class="img-responsive">
@@ -154,6 +154,7 @@
                 <li><a class="soc-email1 " href="mailto:bhgrant8@gmail.com"></a></li>
                 <li><a class="soc-facebook" href="http://www.facebook.com/brian.grant.982292"></a></li>
                 <li><a class="soc-github soc-icon-last" href="https://github.com/brianhgrant"></a></li>
+                <li><a class="soc-freecodecamp soc-icon-last" href="http://www.freecodecamp.com/brianhgrant"></a></li>
               </ul>
             </div>
             <div class ="row">
