commit before branch switch

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                   <h3 id="portfolio-link-3" class="portfolio-link">Check it Out <a href="http://beats-box.bhgconcepts.com/" target="_blank">Live!</a></h3>
                   <h3 id="portfolio-link-4" class="portfolio-link">See a project in <a href="https://github.com/BrianHGrant/clojure-noob/" target="_blank">Clojure!</a></h3>
                 </div>
-                <div class="row portfolio-nav">
+                <div class="row">
                   <div class="nav-col">
                     <img src="img/sign-previous-300px.png" alt="previous-arrow" id="up-arrow" class="img-responsive">
                     <img src="img/sign-next-300px.png" alt="next-arrow" id="down-arrow" class="img-responsive">
