fix issues with responsive styling

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                   <h3 class="portfolio-sub">I like challenges.</h3>
                   <div class="hello">
                     <div class="row">
-                      <h4 class="portfolio-content">What attracts me to software development is that no two applications are the same. Even if you are solved the problem before, there might be a different way to solve it. Maybe this way did not exist a few years before.</h4>
+                      <h4 class="portfolio-content">What attracts me to software development is that no two applications are the same. Even if you have solved the problem before, there might be a different way to solve it. Maybe this way did not exist a few years before.</h4>
                     </div>
                     <div class="row">
                       <img src="img/computer_and_beer.jpg" alt="beer and computer" class="img-responsive portfolio-img-beer">
