--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <div id="bio-space">
             <div class ="row">
               <h3 id="bio-space-title">ABOUT ME</h3>
-              <h4 id= "bio-space-content"> Hi my name is Brian. I am a software developer living in Portland, Oregon. I have been a part of the local community for over a decade and enjoy the entrepreneurial spirit and cultural life of the city.<br><br>I have worked in the technology sector for the last several years in a support role. Recently I have taken the next step in my career as a developer by enrolling at Epicodus, a coding bootcamp here in Portland.<br><br> I am approximately half way through a program focusing on Ruby on Rails and JavaScript, including Angular 2, Ember.js, Node.js, and JQuery. <br><br>In the Fall of 2016 I will be seeking an internship opportunity to complete my studies. I would love to talk more about any opportunities for an internship or future employment. Contact me via <a href="mailto:brian@bhgconcepts.com" target="_blank">email</a> or let's connect on <a href="http://www.linkedin.com/in/brianhgrant" target="_blank">LinkedIn!</a>
+              <h4 id= "bio-space-content"> Hi my name is Brian. I am a software developer living in Portland, Oregon. I have been a part of the local community for over a decade and enjoy the entrepreneurial spirit and cultural life of the city.<br><br>I have worked in the technology sector for the last several years in a support role. Recently I have taken the next step in my career as a developer by enrolling at Epicodus, a coding bootcamp here in Portland.<br><br> I am nearing completion of a program focusing on Ruby on Rails and JavaScript, including Angular 2, Ember.js, Node.js, and JQuery. <br><br>In the Fall of 2016 I will be seeking an internship opportunity to complete my studies. I would love to talk more about any opportunities for an internship or future employment. Contact me via <a href="mailto:brian@bhgconcepts.com" target="_blank">email</a> or let's connect on <a href="http://www.linkedin.com/in/brianhgrant" target="_blank">LinkedIn!</a>
               </h4>
               <h4 class="portfolio-content">When I am not coding life finds me rockhounding, silversmithing, enjoying music, spending time with friends and my love, and exploring the wonders of nature.</h4>
             </div>
@@ -72,7 +72,7 @@
                       <h4 class="portfolio-content float-block content2">I recently worked on a project to create a heat map for reported bikes stolen in a specified city. This Node.js based application collects data from the Bike Index API via an AJAX GET request. <br>This information was then sent by POST to Google Maps API to geocode the addresses and create the map.</h4>
                     </div>
                     <div class="row">
-                      <h4 class="portfolio-content">In the coming months I will be learning to build APIs through Hack Oregon and participating in a project to provide civic information Click <a href="http://www.hackoregon.org" target="_blank">here</a> to learn more about Hack Oregon.</h4>
+                      <h4 class="portfolio-content">In the coming months I will be learning to build APIs through <a href="http://www.hackoregon.org" target="_blank">Hack Oregon</a> and participating in a project to provide greater public access to civic data.</h4>
                     </div>
                   </div>
                 </div>
@@ -120,7 +120,7 @@
                     </div>
                     <div class="row">
                       <img src="img/computer_and_beer.jpg" alt="beer and computer" class="img-responsive portfolio-img-beer">
-                      <h4 class="portfolio-content float-block content2">Right now in addition to my full-time studies in JavaScript and Ruby on Rails I am experimenting in Clojure, C#, and Java. I love to solve algorithms and have competed in some competitive coding challenges.</h4>
+                      <h4 class="portfolio-content float-block content2">Right now in addition to my full-time studies in JavaScript and Ruby on Rails I am experimenting in Clojure, C#, and Elixer. I love to solve algorithms and have competed in some competitive coding challenges.</h4>
                     </div>
                   </div>
                 </div>
