commit current version of site

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="col-sm-3 side-image flex-col">
         <img class="bio-pic img-responsive center-block" src="img/my-face.jpeg" alt="Self Portrait">
         <h3><strong>Brian H. Grant</strong></h3>
-        <h4>Junior Software Developer</h4>
+        <h4>Full Stack Developer</h4>
         <button type="click" class="btn" id="btn-bio">My Bio</button>
         <button type="click" class="btn" id="btn-portfolio">Portfolio</button>
         <button type="click" class="btn" id="btn-resume">Resume</button>
@@ -46,11 +46,11 @@
               </h4>
               <h4 class="portfolio-content">When I am not coding life finds me rockhounding, silversmithing, enjoying music, spending time with friends and my love, and exploring the wonders of nature.</h4>
             </div>
-            <div class="row flex-container">
-              <div class="col-sm-6 bio-photos">
+            <div class="flex-container">
+              <div class="col-sm-4 bio-photos">
                 <img src="img/me_workbench.jpg" alt="me in a garden" class="img-thumbnail img-responsive">
               </div>
-              <div class="col-sm-6 bio-photos">
+              <div class="col-sm-4 bio-photos">
                 <img src="img/me_guitar.jpg" alt="me sitting" class="img-thumbnail img-responsive">
               </div>
             </div>
@@ -62,6 +62,18 @@
               </div>
               <div class="portfolio-projects">
                 <div class="row portfolio-project-0">
+                  <h3 class="portfolio-sub">I know Ruby.</h3>
+                  <div class="hello">
+                    <div class="row">
+                      <h4 class="portfolio-content">Ruby is a great language. Whether using Sinatra to spin up a program in development or working on a full Rails deployment, I am learning all I can about the language and integrating databases into my applications using Active Record and other ORMs.
+                    </div>
+                    <div class="row">
+                      <a href="https://scrabble-score-calculator.herokuapp.com/" target="_blank"><img src="img/scrabble_score.png" alt="scrabble score" class="img-responsive portfolio-img"></a>
+                      <h4 class="portfolio-content float-block content2">Click the photo to run a small program which uses a flat text file to verify if a word entered by user is in the English language. It will then give the user the Scrabble score. This program has been deployed on Heroku.<br><br> To see a more in-depth project, follow the link below to view the source code for a group project which accessed the Spotify API. This program allows for a group of people to contribute to a shared playlist. I worked on the encryption scheme which was used to securely store user passwords in a PostGreSQL database using DataMapper and Warden.</h4>
+                    </div>
+                  </div>
+                </div>
+                <div class="row portfolio-project-1">
                   <h3 class="portfolio-sub">I like data.</h3>
                   <div class="hello">
                     <div class="row">
@@ -76,7 +88,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="row portfolio-project-1">
+                <div class="row portfolio-project-2">
                   <h3 class="portfolio-sub">I can monetize.</h3>
                   <div class="hello">
                     <div class="row">
@@ -84,22 +96,11 @@
                     </div>
                     <div class="row">
                       <img src="img/perfect-vacation.png" alt="perfect vacation finder" class="img-responsive portfolio-img">
-                      <h4 class="portfolio-content float-block content2">Here I made a survey app for users to enter a series of questions. Based on the user's answers a potential vacation spot would be suggested.<br><br> While this application began as a school project I took it the extra step with social media integration. Users can share their results as status updates to Facebook. I connected the application with Audience network to allow for advertisement based income potential when users visit the page through mobile devices.</h4>
+                      <h4 class="portfolio-content float-block content2">Here I made a survey app for users to enter a series of questions. Based on the user's answers a potential vacation spot would be suggested.<br><br> While this application began as a school project I took it the extra step with social media integration. Users can share their results as status updates to Facebook. I connected the application with Audience Network to allow for advertisement based income potential when users visit the page through mobile devices.</h4>
                     </div>
                   </div>
                 </div>
-                <div class="row portfolio-project-2">
-                  <h3 class="portfolio-sub">I know Ruby.</h3>
-                  <div class="hello">
-                    <div class="row">
-                      <h4 class="portfolio-content">Ruby is a great language. Whether using Sinatra to spin up a program in development or working on a full Rails deployment, I am learning all I can about the language and integrating databases into my applications using Active Record and other ORMs.
-                    </div>
-                    <div class="row">
-                      <a href="https://scrabble-score-calculator.herokuapp.com/"><img src="img/scrabble_score.png" alt="scrabble score" class="img-responsive portfolio-img"></a>
-                      <h4 class="portfolio-content float-block content2">Click the photo to run a small program which uses a flat text file to verify if a word entered by user is in the English language. It will then give the user the Scrabble score. This program has been deployed on Heroku.<br><br> To see a more in-depth project, follow the link below to view the source code for a group project which accessed the Spotify API. This program allows for a group of people to contribute to a shared playlist. I worked on the encryption scheme which was used to securely store user passwords in a PostGreSQL database using DataMapper and Warden.</h4>
-                    </div>
-                  </div>
-                </div>
+
                 <div class="row portfolio-project-3">
                   <h3 class="portfolio-sub">I like time.</h3>
                   <div class="hello">
@@ -120,18 +121,19 @@
                     </div>
                     <div class="row">
                       <img src="img/computer_and_beer.jpg" alt="beer and computer" class="img-responsive portfolio-img-beer">
-                      <h4 class="portfolio-content float-block content2">Right now in addition to my full-time studies in JavaScript and Ruby on Rails I am experimenting in Clojure, C#, and Elixer. I love to solve algorithms and have competed in some competitive coding challenges.</h4>
+                      <h4 class="portfolio-content float-block content2">Right now in addition to my full-time studies in JavaScript and Ruby on Rails I am experimenting in Clojure, C#, and Elixer. I am also participating in Free Code Camp, click the green flame icon above to see my projects in that program.</h4>
+                      <h4 class="portfolio-content">I've also been working in Ember. I built a question and answer forum with a user model.</h4>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="portfolio-nav">
+              <div class="portfolio-nav portfolio-content">
                 <div class="row">
-                  <h3 id="portfolio-link-0" class="portfolio-link">See it on <a href="https://github.com/BrianHGrant/where-bike-theft" target="_blank">GitHub!</a></h3>
-                  <h3 id="portfolio-link-1" class="portfolio-link">Find your <a href="http://perfect-vacation.bhgconcepts.com/" target="_blank">Perfect Vacation!</a></h3>
-                  <h3 id="portfolio-link-2" class="portfolio-link">Be your own <a href="https://github.com/BrianHGrant/office_dj" target="_blank">Office Dj!</a></h3>
+                  <h3 id="portfolio-link-0" class="portfolio-link">Be your own <a href="https://github.com/BrianHGrant/office_dj" target="_blank">Office Dj!</a></h3>
+                  <h3 id="portfolio-link-1" class="portfolio-link">See the bike project on <a href="https://github.com/BrianHGrant/where-bike-theft" target="_blank">GitHub!</a></h3>
+                  <h3 id="portfolio-link-2" class="portfolio-link">Find your <a href="http://perfect-vacation.bhgconcepts.com/" target="_blank">Perfect Vacation!</a></h3>
                   <h3 id="portfolio-link-3" class="portfolio-link">Check it Out <a href="http://beats-box.bhgconcepts.com/" target="_blank">Live!</a></h3>
-                  <h3 id="portfolio-link-4" class="portfolio-link">See a project in <a href="https://github.com/BrianHGrant/clojure-noob/" target="_blank">Clojure!</a></h3>
+                  <h3 id="portfolio-link-4" class="portfolio-link">I've deployed it to <a href="https://enigmatic-mountain-28503.herokuapp.com/" target="_blank"> Heroku!</a></h3>
                 </div>
                 <div class="row">
                   <div class="nav-col">
@@ -172,15 +174,16 @@
               <ul class="resume-main">
                 <li><strong>Languages:</strong>
                   <ul>
-                    <li><strong>Proficient:</strong> Ruby, HTML, CSS, Javascript (JQuery)</li>
-                    <li><strong>Working Knowledge:</strong> C#, Java, PHP, Ember.js</li>
-                    <li><strong>Introductory Knowledge:</strong> Clojure, Node.js, Angular(2).js, D3.js</li>
+                    <li><strong>Proficient:</strong> Ruby, HTML, CSS, JavaScript </li>
+                    <li><strong>Working Knowledge:</strong> Node.js</li>
+                    <li><strong>Introductory Knowledge:</strong> Clojure, Elixer, C#, Java, Python</li>
                   </ul>
                 </li>
-                <li><strong>Frameworks:</strong> Rails, Sinatra, .NET</li>
+                <li><strong>Frameworks:</strong> Rails, Sinatra, JQuery, Ember.js, Angular 2, D3.js, Django</li>
                 <li><strong>Systems:</strong> Windows XP/7/8/10, Windows Server 2012, Mac OS X, Linux</li>
-                <li><strong>Databases:</strong> SQL Server (Transact­SQL), MySQL (PL­SQL), PostGres, MS Access</li>
-                <li><strong>Project Management:</strong> Agile, SCRUM, Behavior Driven Development</li>
+                <li><strong>Development and Workforce Tools:</strong> Git, Github, Slack, Trello, Visual Studio, Adobe</li>
+                <li><strong>Project Management: </strong> Agile, SCRUM, Test Driven Development</li>
+                <li><strong>Databases:</strong> SQL Server (Transact-SQL), MySQL (PL-SQL), PostGreSQL, MS Access</li>
               </ul>
               <h3 id="resume-section">Certifications</h3>
               <ul class="resume-main">
@@ -208,6 +211,13 @@
                     <li>4.0 GPA</li>
                   </ul>
                 </li>
+                <li><strong>Free Code Camp</strong>, Online, <strong>Full Stack Web Development Certification
+                </strong>
+                  <ul>
+                    <li>Self-directed instruction primarily in the JavaScript stack</li>
+                    <li>Active member of the local meetup to support fellow learners</li>
+                  </ul>
+                </li>
                 <li><strong>Team Treehouse</strong>, Online, <strong>Web Development/PHP</strong></li>
                 <li><strong>University of Vermont</strong>, Burlington, VT, <strong>Anthropology</strong>
                   <ul>
@@ -232,6 +242,10 @@
                 <li>Live Music,</li>
                 <li>Projection</li>
               </ul>
+            </div>
+            <div class="row">
+              <div id="top-button"><img id="thumb" src="img/button-24807_1280.png">
+              </div>
             </div>
           </div>
         </div>
